--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     padding: 0px;
 }
 body{
-    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+    /* background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); */
+    background-color: #a8edea;
 }
 .contaner{
     margin: 14px;
@@ -26,7 +27,7 @@ body{
     text-align: center;
     width: 211px;
     border-radius: 40px;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-color: #bbc9c8;
     flex-wrap: wrap;
 }
 
